updates mostly to exercises

--- a/notebooks/04-napari_magicgui.ipynb
+++ b/notebooks/04-napari_magicgui.ipynb
@@ -5,7 +5,7 @@
    "id": "36a1f050-9f5e-42a5-89c1-3543b2361eeb",
    "metadata": {},
    "source": [
-    "# Custom user interface in napari\n",
+    "# napari and magicgui\n",
     "\n",
     "One of the most interesting features of napari, is that it lets you add relatively easily Graphical User Interface (GUI) elements to the napari viewer. There are two ways to create such a GUI: one automated way using a package called ```magicgui``` and a more complex one using the ```Qt``` library which offers more flexibility. We start here with a brief example using ```magicgui``` and see the ```Qt``` version in the last chapter when we create a plugin."
    ]
