--- a/notebooks/03-napari_using_plugins.ipynb
+++ b/notebooks/03-napari_using_plugins.ipynb
@@ -225,9 +225,17 @@
     "- Create a mask using a threshold of your choice\n",
     "- Create a labeled image from the mask\n",
     "- Add the labeled image in napari\n",
-    "- Go to ```Tools -> Measurement labels -> Regionprops (scikit-image, nsr)```\n",
+    "- Go to ```Tools -> Measurement tables -> Regionprops (scikit-image, nsr)```\n",
     "- Try to pick a color in the image and see what happens in the table"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53743be-d1c7-4035-ab8e-2d8f0887f1ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
