--- a/notebooks/06-Create_plugin.ipynb
+++ b/notebooks/06-Create_plugin.ipynb
@@ -13,18 +13,64 @@
    "id": "783c76db-2682-4fd8-9f65-7e03f8907d12",
    "metadata": {},
    "source": [
-    "We will use here the software cookiecutter to create a plugin with good defaults. First, if not yet there we need to install cookiecutter.\n",
+    "We will use here the software [copier](https://copier.readthedocs.io/en/stable/) to create a plugin with good defaults. Copier is a tool that allows to create a questionaire for users to fill in their terminal that then allows to create a folder containing the right files and structure for a custom plugin."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f9d8fb7-8a92-41f1-8b53-1a9cab1bff38",
+   "metadata": {},
+   "source": [
+    "## Running copier\n",
     "\n",
-    "1. Activate your environment\n",
-    "2. install cookiecutter:\\\n",
-    "   ```pip install cookiecutter```\n",
+    "We pre-installed the necessary packages in the course environment. If in the future you want to create a plugin in another environment, you would need the following:\n",
     "\n",
-    "Once this is done, follow the steps explained [here](https://kevinyamauchi.github.io/open-image-data/tutorials/neubias_plugins/make_a_simple_plugin.html#using-the-cookiecutter-template-to-create-your-plugin-directory)."
+    "    conda create -y --name copier-env python=3.12 copier jinja2-time npe2\n",
+    "\n",
+    "To now create the plugin open a terminal, activate the course environment (or wherever you have copier installed). Then, in your terminal, use `cd` to move to the location where you want to create your plugin and execute:\n",
+    "\n",
+    "    copier copy --trust https://github.com/napari/napari-plugin-template <new-plugin-name>\n",
+    "\n",
+    "**Replace `<new-plugin-name>` (including the <> signs) by your intended name e.g. `napari-dslcourse`.**\n",
+    "\n",
+    "Now you will be prompted to answer a few questions to create your plugin scaffold. For this demo it is not crucial to enter \"real\" information. For example you can pick any name, email etc. In general using the default answers for the questions about which types of plugins to use is good."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04a01800-1718-407d-9ad5-1fefd566d2ec",
+   "metadata": {},
+   "source": [
+    "## Installing your plugin\n",
+    "\n",
+    "For your plugin to become visible when you launch napari, you need to install it in your environment. You can do a *local* installation for this, i.e. install the plugin directly from the code that you have on your machine. For this, move to inside your new plugin in the terminal, e.g. inside the napari-dslcourse folder.\n",
+    "\n",
+    "You can install your plugin now. Make sure your environment is activated and run:\n",
+    "\n",
+    "    pip install -e .\n",
+    "\n",
+    "**Note that the command ends with a `.` which is important to include!**. The command means:\n",
+    "- install the code your find right here at `.`\n",
+    "- the option `-e` specifies that we want to have an **editable** installation, i.e. we don't want to code to be copied to a place that we can't edit, but Python should just use the one that you just created and will edit.\n",
+    "\n",
+    "## Editing the plugin\n",
+    "\n",
+    "From there one we will interactively explain the plugin structure that you created using copier and show how to edit the plugin. For more information about plugin, refer to the official documentation: https://napari.org/stable/plugins/building_a_plugin/index.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c7b07ba-93a0-408f-9037-76e98e6f35cf",
+   "metadata": {},
+   "source": [
+    "## Suggestion\n",
+    "\n",
+    "We suggest here to create a plugin for spot detection that uses the functions defined in the previous notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "2e5db352-1239-4951-b84b-b2640566907a",
    "metadata": {},
    "outputs": [],
@@ -65,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "<Image layer 'spots' at 0x1597ff520>"
+       "<Image layer 'spots' at 0x10816d790>"
       ]
      },
      "execution_count": 4,
@@ -193,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
