--- a/notebooks/03-napari_using_plugins.ipynb
+++ b/notebooks/03-napari_using_plugins.ipynb
@@ -238,22 +238,17 @@
    "source": [
     "## Exercise\n",
     "\n",
-    "We use here the [napari-skimage](https://www.napari-hub.org/plugins/napari-skimage) plugin:\n",
+    "1. We use here the [napari-skimage](https://www.napari-hub.org/plugins/napari-skimage) plugin:\n",
     "- Open the ```Cells (3D+2Ch)``` image and keep only nuclei\n",
     "- Recover the data in Jupyter\n",
     "- Using the plugin functionalities, create a mask using Otsu's method\n",
     "- Using the plugin functionalities, create a labeled image from the mask\n",
     "- Go to ```Tools -> Measurement tables -> Regionprops (scikit-image, nsr)```\n",
-    "- Try to pick a color in the image and see what happens in the table"
+    "- Try to pick a color in the image and see what happens in the table\n",
+    "\n",
+    "2. Try to install (**using conda**) the `napari-animation`\n",
+    " plugin. Try to install it via the plugin interface."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e53743be-d1c7-4035-ab8e-2d8f0887f1ab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
